Make wrapper smaller to prevent overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body {
 }
 
 .wrapper {
-  width: 100%;
+  width: 75%;
 }
